Ajout page_evaluation pour simplifier la modification d'une évaluation

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -364,6 +364,11 @@ h1, h2, h3, h4, h5, h6 {
     min-height: 160px;
 }
 
+.card-content-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
 .card-header {
     display: flex;
     flex-direction: column;
