En cours, on avance

--- a/app/templates/page_flan.html
+++ b/app/templates/page_flan.html
@@ -7,7 +7,8 @@
         {{ afficher_objet('flan', flan) }}
     </div>
     <!-- Grille des évaluations -->
-    {{ afficher_grille('evaluation', flan.evaluations, current_user, form, etablissement, flan) }}
+    {{ afficher_grille('evaluation', flan.evaluations, current_user, form_eval, etablissement, flan) }}
+
 
 
     <!-- Boutons d'action -->
