--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -6,12 +6,14 @@
         <div class="{{ classe }} placeholder"><span>Pas de photo</span></div>
     {% endif %}
 {% endmacro %}
+
 <!-- BADGES -->
 {% macro afficher_badge_etablissement(etablissement) %}
     {% if etablissement.label %}
         <span class="badge">⭐ Labellisé</span>
     {% endif %}
 {% endmacro %}
+
 {% macro afficher_badge_flan(flan) %}
     {% if flan.prix is not none %}
         <span class="badge">{{ "%.2f"|format(flan.prix) }} €</span>
@@ -19,6 +21,7 @@
         <span class="badge">Prix non renseigné</span>
     {% endif %}
 {% endmacro %}
+
 {% macro afficher_badge_statut(evaluation, current_user) %}
     {% if current_user and current_user.is_authenticated and (current_user.is_admin or evaluation.user_id == current_user.user_id) %}
         {% if evaluation.statut.value == 'VALIDE' %}
@@ -28,6 +31,7 @@
         {% endif %}
     {% endif %}
 {% endmacro %}
+
 {% macro afficher_boutons_actions(objet, current_user, id_field, modify_route, delete_route, validate_route) %}
     {# Vérifie si l'utilisateur est authentifié #}
     {% if current_user.is_authenticated %}
@@ -85,6 +89,7 @@
         {% endif %}
     {% endif %}
 {% endmacro %}
+
 <!-- MACROS D'AFFICHAGE D'OBJETS -->
 {% macro afficher_etablissement(etablissement, current_user) %}
     <a href="{{ url_for('main.afficher_etablissement_unique', id_etab=etablissement.id_etab) }}" class="carte" data-id="{{ etablissement.id_etab }}" data-lat="{{ etablissement.latitude }}" data-lng="{{ etablissement.longitude }}">
@@ -105,6 +110,7 @@
         </div>
     </a>
 {% endmacro %}
+
 {% macro afficher_flan(flan, current_user) %}
     <a href="{{ url_for('main.afficher_flan_unique', id_flan=flan.id_flan) }}" class="carte">
         <div class="card-image-container">
@@ -124,6 +130,7 @@
         </div>
     </a>
 {% endmacro %}
+
 {% macro afficher_evaluation(evaluation, current_user, form) %}
     <div class="card">
         <div class="card-content">
@@ -160,6 +167,7 @@
         }
     </script>
 {% endmacro %}
+
 {% macro afficher_criteres_evaluation(evaluation) %}
     <div class="criteria">
             <div class="criterion">
@@ -239,6 +247,7 @@
     <!-- Possibilité d'ajout toujours en fin de grille-->
     {{ afficher_bouton_ajout(objet_type, current_user, etablissement, form, flan) }}
 {% endmacro %}
+
 <!-- Afficher un objet, que ce soit sur sa page ou dans une grille -->
 {% macro afficher_objet(objet_type, objet, current_user=None, form=None) %}
     {% if objet_type == 'etablissement' %}
@@ -249,6 +258,7 @@
         {{ afficher_evaluation(objet, current_user, form) }}
     {% endif %}
 {% endmacro %}
+
 <!-- Déterminer si le bouton "Ajout" s'affiche ou si on propose de se connecter -->
 {% macro afficher_bouton_ajout(objet_type, current_user, etablissement=None, form=None, flan=None) %}
     {% if objet_type == 'etablissement' %}
@@ -286,6 +296,7 @@
         </div>
     {% endif %}
 {% endmacro %}
+
 <!-- MACROS POUR PROPOSER DES CHOSES -->
 <!-- Affiche un champ de formulaire -->
 {% macro afficher_champ_formulaire(field) %}
@@ -297,6 +308,7 @@
         {% endif %}
     </div>
 {% endmacro %}
+
 <!-- Proposer un flan -->
 {% macro proposer_flan(form, action_url) %}
     <form method="POST" action="{{ action_url }}" class="form-container">
@@ -312,6 +324,7 @@
         </div>
     </form>
 {% endmacro %}
+
 <!-- Proposer un établissement -->
 {% macro proposer_etablissement(form, action_url, current_user) %}
     <form method="POST" action="{{ action_url }}" class="form-container">
@@ -346,6 +359,7 @@
         </div>
     </form>
 {% endmacro %}
+
 <!-- Proposer une évaluation -->
 {% macro proposer_evaluation(form, action_url) %}
     <form method="POST" action="{{ action_url }}" class="form-container">
@@ -355,6 +369,52 @@
         {{ afficher_champ_formulaire(form.texture) }}
         {{ afficher_champ_formulaire(form.gout) }}
         {{ afficher_champ_formulaire(form.description) }}
+        <div class="form-group">
+            {{ form.submit(class="btn btn-proposer") }}
+        </div>
+    </form>
+{% endmacro %}
+
+<!-- Modifier un établissement -->
+{% macro modifier_etablissement(form, action_url) %}
+    <form method="POST" action="{{ action_url }}" class="form-container">
+        {{ form.hidden_tag() }}
+        {{ afficher_champ_formulaire(form.nom) }}
+        {{ afficher_champ_formulaire(form.description) }}
+        {{ afficher_champ_formulaire(form.adresse) }}
+        {{ afficher_champ_formulaire(form.ville) }}
+        {{ afficher_champ_formulaire(form.code_postal) }}
+        {{ afficher_champ_formulaire(form.latitude) }}
+        {{ afficher_champ_formulaire(form.longitude) }}
+        {{ afficher_champ_formulaire(form.type_etab) }}
+        {% if current_user.is_admin %}
+            <div class="form-group">
+                <label>Labellisé</label><br>
+                <input type="radio" name="label" value="Oui" {% if form.label.data == 'Oui' %}checked{% endif %}> Labellisé par la Flanterie<br>
+                <input type="radio" name="label" value="Non" {% if form.label.data == 'Non' %}checked{% endif %}> Non labellisé
+            </div>
+            <div class="form-group">
+                <label>Visité</label><br>
+                <input type="radio" name="visite" value="Oui" {% if form.visite.data == 'Oui' %}checked{% endif %}> Visité par la Flanterie<br>
+                <input type="radio" name="visite" value="Non" {% if form.visite.data == 'Non' %}checked{% endif %}> Non visité
+            </div>
+        {% endif %}
+        <div class="form-group">
+            {{ form.submit(class="btn btn-proposer") }}
+        </div>
+    </form>
+{% endmacro %}
+
+<!-- Modifier un flan -->
+{% macro modifier_flan(form, action_url) %}
+    <form method="POST" action="{{ action_url }}" class="form-container">
+        {{ form.hidden_tag() }}
+        {{ afficher_champ_formulaire(form.nom) }}
+        {{ afficher_champ_formulaire(form.description) }}
+        {{ afficher_champ_formulaire(form.prix) }}
+        {{ afficher_champ_formulaire(form.type_pate) }}
+        {{ afficher_champ_formulaire(form.type_saveur) }}
+        {{ afficher_champ_formulaire(form.type_texture) }}
         <div class="form-group">
             {{ form.submit(class="btn btn-proposer") }}
         </div>
