--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-
   <div class="container">
       <h1>Tableau de bord</h1>
       <div id="user-info" class="etablissement-header">
@@ -15,44 +14,44 @@
       </div>
       <div id="edit-profile-form" style="display: none;">
           <form method="POST" action="" class="form">
-              {{ form.hidden_tag() }}
+              {{ profile_form.hidden_tag() }}
               <div class="form-group">
-                  {{ form.pseudo.label }}<br>
-                  {{ form.pseudo(size=20, class="form-control") }}<br>
-                  {% for error in form.pseudo.errors %}
+                  {{ profile_form.pseudo.label }}<br>
+                  {{ profile_form.pseudo(size=20, class="form-control") }}<br>
+                  {% for error in profile_form.pseudo.errors %}
                   <span class="error-message">[{{ error }}]</span>
                   {% endfor %}
               </div>
               <div class="form-group">
-                  {{ form.email.label }}<br>
-                  {{ form.email(size=20, class="form-control") }}<br>
-                  {% for error in form.email.errors %}
+                  {{ profile_form.email.label }}<br>
+                  {{ profile_form.email(size=20, class="form-control") }}<br>
+                  {% for error in profile_form.email.errors %}
                   <span class="error-message">[{{ error }}]</span>
                   {% endfor %}
               </div>
               <div class="form-group">
-                  {{ form.current_password.label }}<br>
-                  {{ form.current_password(size=20, class="form-control") }}<br>
-                  {% for error in form.current_password.errors %}
+                  {{ profile_form.current_password.label }}<br>
+                  {{ profile_form.current_password(size=20, class="form-control") }}<br>
+                  {% for error in profile_form.current_password.errors %}
                   <span class="error-message">[{{ error }}]</span>
                   {% endfor %}
               </div>
               <div class="form-group">
-                  {{ form.new_password.label }}<br>
-                  {{ form.new_password(size=20, class="form-control") }}<br>
-                  {% for error in form.new_password.errors %}
+                  {{ profile_form.new_password.label }}<br>
+                  {{ profile_form.new_password(size=20, class="form-control") }}<br>
+                  {% for error in profile_form.new_password.errors %}
                   <span class="error-message">[{{ error }}]</span>
                   {% endfor %}
               </div>
               <div class="form-group">
-                  {{ form.confirm_password.label }}<br>
-                  {{ form.confirm_password(size=20, class="form-control") }}<br>
-                  {% for error in form.confirm_password.errors %}
+                  {{ profile_form.confirm_password.label }}<br>
+                  {{ profile_form.confirm_password(size=20, class="form-control") }}<br>
+                  {% for error in profile_form.confirm_password.errors %}
                   <span class="error-message">[{{ error }}]</span>
                   {% endfor %}
               </div>
               <div class="form-group">
-                  {{ form.submit(class="btn btn-submit") }}
+                  {{ profile_form.submit(class="btn btn-submit") }}
                   <button id="cancel-edit-btn" class="btn btn-secondary">Annuler</button>
               </div>
           </form>
@@ -60,13 +59,13 @@
       <!-- Section des évaluations de l'utilisateur -->
       <div class="evaluations-section">
           <h2 class="evaluations-title">Mes evaluations</h2>
-          {{ afficher_grille('evaluation', current_user.evaluations, current_user, form, etablissement, flan) }}
+          {{ afficher_grille('evaluation', current_user.evaluations, current_user, eval_form) }}
       </div>
       <!-- Section des évaluations en attente pour les administrateurs -->
       {% if current_user.is_admin %}
       <div class="evaluations-section">
           <h2 class="evaluations-title">Evaluations en attente de validation</h2>
-          {{ afficher_grille('evaluation', pending_evaluations, current_user, form, etablissement, flan) }}
+          {{ afficher_grille('evaluation', pending_evaluations, current_user, eval_form) }}
       </div>
       {% endif %}
   </div>
@@ -75,7 +74,6 @@
           document.getElementById('user-info').style.display = 'none';
           document.getElementById('edit-profile-form').style.display = 'block';
       });
-
       document.getElementById('cancel-edit-btn').addEventListener('click', function() {
           document.getElementById('user-info').style.display = 'block';
           document.getElementById('edit-profile-form').style.display = 'none';
