--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -10,7 +10,7 @@
     </div>
 
     <!-- Grille des flans -->
-    {{ afficher_grille('flan', etablissement.flans, current_user, form, etablissement) }}
+    {{ afficher_grille('flan', etablissement.flans, current_user, form_flan, etablissement) }}
 
     <!-- Bouton retour -->
     <a href="#" onclick="window.history.back(); return false;" class="btn-back">← Retour à la liste</a>
